--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "orh-electron-kiosk",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "OneRoom Health Electron Kiosk Application",
   "main": "electron/main-kiosk.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "author": "OneRoom Health",
   "license": "ISC",
   "dependencies": {
+    "auto-launch": "^5.0.6",
     "electron-store": "^8.1.0",
     "dotenv": "^16.3.1"
   },
