Enhance user-type-specific URL handling for LED CareWall and Provider Workstation. Update environment variables in .env.example, implement URL logic in main-states.js, and add testing script for user type configurations. Update documentation to reflect changes in URL management and state handling.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,31 @@
 
 # Optional: Start in full-screen mode (default: false, uses maximized)
 #FULLSCREEN=true
+
+# User Type: 'provider' or 'ledcarewall'
+# This determines which states and URLs are available
+USER_TYPE=ledcarewall
+
+# Auto-start on system boot (default: true)
+# Set to 'false' to disable automatic startup
+AUTO_START=true
+
+# State URLs - LED CareWall Display (when USER_TYPE=ledcarewall)
+# Screensaver: Exact URL (no params appended)
+SCREENSAVER_URL=splash
+
+# Carescape view URL (query params like roomId will be appended)
+CARESCAPE_URL=https://fe-app.oneroomhealth.app/ledwallview/care
+
+# In-session CareWall view URL (params appended)
+IN_SESSION_URL=https://fe-app.oneroomhealth.app/ledwallview/ma
+
+# Goodbye/Thank you screen URL (params appended)
+GOODBYE_URL=https://fe-app.oneroomhealth.app/ledwallview/endAppt
+
+# State URLs - Provider Workstation (when USER_TYPE=provider)
+# Provider screensaver - exact URL (no params appended)
+PROVIDER_SCREENSAVER_URL=https://fe-app.oneroomhealth.app/wall/provider-display/screensaver
+
+# Provider in-session view - params like roomId, inviteId will be appended
+PROVIDER_IN_SESSION_URL=https://fe-app.oneroomhealth.app/extensionproviderview
