updates for provider, ledcarewall electrong

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,27 @@
 
 # Optional: Start in full-screen mode (default: false, uses maximized)
 #FULLSCREEN=true
+
+# User Type: 'provider' or 'ledcarewall'
+# This determines which states and URLs are available
+USER_TYPE=ledcarewall
+
+# Auto-start on system boot (default: true)
+# Set to 'false' to disable automatic startup
+AUTO_START=true
+
+# State URLs - LED CareWall Display
+# Base URL for LED wall displays
+LED_WALL_BASE_URL=https://fe-app.oneroomhealth.app/ledwallview
+
+# Screensaver: Use 'splash' for local splash.html or provide full URL
+SCREENSAVER_URL=splash
+
+# Carescape view URL (query params like roomId will be appended)
+CARESCAPE_URL=${LED_WALL_BASE_URL}/care
+
+# In-session CareWall view URL
+IN_SESSION_URL=${LED_WALL_BASE_URL}/ma
+
+# Goodbye/Thank you screen URL
+GOODBYE_URL=${LED_WALL_BASE_URL}/endAppt
